feat(app): update editor container